# origami_analysis_tests

./: .gitignore  Kresling.py  README.md  discretized_kresling_sah.json  eigv_kresling.json  eigv_kresling2.json  eigv_kresling34.json  kresling_n_6_b_52_h_70_h0_0.0_t_0.0625_kf_0.02.json  out_fold.json  out_fold_rect.json  out_kresling.json  pyproject.toml  rigid_kresling_sah.json  setup.cfg  setup_script.sh  test.py
bars/: instability.py
examples/: Kresling.py  e.py  simple_fold.py  square_fold.py
output/: discretized_kresling_sah.json  discretized_kresling_sah2.json  kresling_bah.json  kresling_sah.json  rigid_kresling_sah.json
results_comparison_dr_novelino/: OpenKresling_n_6_b_13_h_18.2_h0_0_t_0.12_kf_0.024_poaso_0.3_E_1219.4_mesh_2.json  OpenKresling_n_6_b_13_h_18.2_h0_0_t_0.12_kf_10.000000000000002_poaso_0.3_E_1219.4_mesh_4.json  OpenKresling_n_6_b_13_h_18.2_h0_0_t_0.12_kf_2.4_poaso_0.3_E_1219.4_mesh_4.json  eigv_OpenKresling_n_6_b_13_h_18.2_h0_0_t_0.12_kf_0.0024_poaso_0.3_E_1219.4_mesh_4.json  eigv_OpenKresling_n_6_b_13_h_18.2_h0_0_t_0.12_kf_0.0024_poaso_0.3_E_1219400.0_mesh_4.json
results_kreslings/: plot_disp_loadf.py
results_otros/: OpenKresling_n_6_b_13_h_18.2_h0_0_t_0.12_kf_0.0024_poaso_0.3_E_1219.4_mrf_2_EIGV_SCALE_0.0.json  OpenKresling_n_6_b_13_h_18.2_h0_0_t_0.12_kf_0.0024_poaso_0.3_E_1219.4_mrf_2_EIGV_SCALE_0.1.json  OpenKresling_n_6_b_13_h_18.2_h0_0_t_0.12_kf_0.0024_poaso_0.3_E_1219.4_mrf_2_EIGV_SCALE_0.2.json  OpenKresling_n_6_b_13_h_18.2_h0_0_t_0.12_kf_0.0024_poaso_0.3_E_1219.4_mrf_2_EIGV_SCALE_0.30000000000000004.json  plot_disp_loadf.py  (+8 more)
(+58 files in other folders)
