[metadata]
name = unhinged
author = Arturo Rodriguez
author_email = da.rodriguezh@rice.edu
version = attr: unhinged.__version__
description = Shell and hinge model for origami simulation
long_description_content_type = text/markdown
long_description =  file: README.md
url = https://github.com/ZibraMax/unhinged
package_dir =
    = src
[options]
python_requires = >=3.11
install_requires =
    numpy
    matplotlib
    tqdm
[options.extras_require]
docs = 
    sphinx
    m2r2
    docutils==0.18.1
    furo
test =
    pytest
    pytest-emoji
